--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -5,9 +5,11 @@ body {
     justify-content: center;
     align-items: center;
     font-family: var(--font2);
-    font-size: 15px;
+    font-size: var(--sizeText);
     background-color: var(--color1);
 }
+
+/***********HEADER********************/
 
 header {
     width: 98vw;
@@ -20,16 +22,17 @@ header {
 }
 
 h1 {
-    font-size: 30px;
+    font-size: var(--sizeTitle);
     font-family: var(--font1);
     color: var(--color3);
 }
 
 header p {
     text-align: center;
-    font-size: 10px;
     color: var(--color3);
 }
+
+/**********MAIN*******************/
 
 main {
     width: 98vw;
@@ -44,12 +47,88 @@ section {
     margin: 10px 0;
     padding: 10px;
     background-color: var(--color2);
-    border-radius: 10px;
+    border-radius: var(--radius);
 }
 
 h2 {
+    margin-bottom: 10px;
     font-size: 20px;
+    text-align: center;
 }
+
+.guideLine {
+    font-size: var(--sizeSubTitle);
+    color: var(--color3);
+}
+
+button {
+    background: var(--color1);
+    padding: 5px;
+    border: solid 1px var(--color3);
+    border-radius: var(--radius);
+    margin: 0 5px;
+}
+
+#projectsList {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+input[type=submit] {
+    background-color: var(--color1);
+}
+
+input,
+select {
+    margin: 5px 0;
+    padding: 5px;
+    background: var(--color2);
+    border: solid 1px var(--color3);
+    border-radius: var(--radius);
+}
+
+.checkerBtn {
+    width: 50px;
+    height: 25px;
+    margin: 0 5px;
+    background-color: var(--color3);
+    padding: 1px 5px;
+    border-radius: var(--radius);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+button.suppressorBtn {
+    color: var(--color2);
+    background: var(--color4);
+    border: solid var(--color3) 1px;
+    width: 30px;
+    margin: 0 5px;
+}
+
+form {
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    margin: 5px 0;
+    padding: 5px;
+    display: flex;
+    justify-content: flex-end;
+    border: solid 1px var(--color3);
+    border-radius: var(--radius);
+    align-items: center;
+}
+
+li p {
+    width: 75%;
+}
+
+/**********FOOTER********************/
 
 footer {
     width: 98vw;
@@ -59,41 +138,4 @@ footer {
     justify-content: center;
     align-items: center;
     max-width: var(--maxAppWidth);
-}
-
-.guideLine {
-    font-size: 12px;
-    color: var(--color3);
-}
-
-button {
-    background: var(--color1);
-    padding: 5px;
-    border: solid 1px var(--color3);
-    border-radius: 10px;
-    margin: 0 5px;
-}
-
-button.suppressorBtn {
-    color: var(--color2);
-    background: var(--color3);
-    border: solid var(--color3) 2px;
-    border-radius: 10px;
-    width: 30px;
-    margin: 0 5px;
-}
-
-li {
-    margin: 5px 0;
-    padding: 5px;
-    display: flex;
-    justify-content: space-around;
-    border: solid 1px var(--color3);
-    align-items: center;
-}
-
-li div {
-    display: flex;
-    gap: 5px;
-    align-items: center;
 }
